--- a/trunk/Code-Pandas/.classpath
+++ b/trunk/Code-Pandas/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib-jar/swingx-beaninfo-0.9.7.jar"/>
 	<classpathentry kind="lib" path="lib-jar/Filters.jar"/>
 	<classpathentry kind="lib" path="lib-jar/prefuse.jar"/>
+	<classpathentry kind="lib" path="lib-jar/jxl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
